// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/format should format message with EN Locale 1`] = `
Object {
  "language": Object {
    "locale": "en",
  },
  "number.noExist": Object {
    "exist": "",
  },
  "number.noExist.withOneParam": Object {
    "test": "",
  },
  "number.withOneParam": Object {
    "test": "with 1 parameter",
  },
  "number.withOneParam.thousand": Object {
    "test": "with 1,000 parameter",
  },
  "number.withPercentParam": Object {
    "test": "with 50% parameter",
  },
  "number.withUSDFormat": Object {
    "test": "with $1,234.00 parameter",
  },
  "number.withoutParam": Object {
    "test": "no parameter",
  },
  "plural.simple.noparam": Object {
    "test": "You have {param, plural, =0 {no parameter.} =1 {one parameter.} other {# parameters.}}",
  },
  "plural.simple.one": Object {
    "test": "You have one parameter.",
  },
  "plural.simple.thousand": Object {
    "test": "You have 1,000 parameters.",
  },
  "plural.simple.two": Object {
    "test": "You have 2 parameters.",
  },
  "plural.simple.zero": Object {
    "test": "You have no parameter.",
  },
  "select.gender.female": Object {
    "test": "She will respond shortly.",
  },
  "select.gender.male": Object {
    "test": "He will respond shortly.",
  },
  "select.gender.shemale": Object {
    "test": "They will respond shortly.",
  },
  "simple.withOneParam": Object {
    "test": "with ONE parameter",
  },
  "simple.withOneParam.noParams": Object {
    "test": "with {one} parameter",
  },
  "simple.withOneParam.noParams2": Object {
    "test": "with {one} parameter",
  },
  "simple.withOneParam.noParams3": Object {
    "test": "with {one} parameter",
  },
  "simple.withTwoParam": Object {
    "test": "with ONE TWO parameter",
  },
  "simple.withoutParam": Object {
    "test": "no parameter",
  },
  "string.noExist": Object {
    "noExist": "",
  },
  "string.path.noExist": Object {
    "exist": "",
  },
  "string.simple": Object {
    "withOneParam": "with {one} parameter",
    "withTwoParam": "with {one} {two} parameter",
    "withoutParam": "no parameter",
  },
  "string.simple.all.one": Object {
    "withOneParam": "with ONE parameter",
    "withTwoParam": "with {one} {two} parameter",
    "withoutParam": "no parameter",
  },
  "string.simple.all.one.two": Object {
    "withOneParam": "with ONE parameter",
    "withTwoParam": "with ONE TWO parameter",
    "withoutParam": "no parameter",
  },
  "string.simple.all.two": Object {
    "withOneParam": "with {one} parameter",
    "withTwoParam": "with ONE TWO parameter",
    "withoutParam": "no parameter",
  },
  "string.simple.withOneParam": Object {
    "withOneParam": "with ONE parameter",
  },
  "string.simple.withoutParam": Object {
    "withoutParam": "no parameter",
  },
}
`;

exports[`src/format should format message with EN Locale 2`] = `
Object {
  "language": Object {
    "locale": "en",
  },
  "number.noExist": Object {},
  "number.noExist.withOneParam": Object {},
  "number.withOneParam": Object {},
  "number.withOneParam.thousand": Object {},
  "number.withPercentParam": Object {},
  "number.withUSDFormat": Object {},
  "number.withoutParam": Object {},
  "plural.simple.noparam": Object {},
  "plural.simple.one": Object {},
  "plural.simple.thousand": Object {},
  "plural.simple.two": Object {},
  "plural.simple.zero": Object {},
  "select.gender.female": Object {},
  "select.gender.male": Object {},
  "select.gender.shemale": Object {},
  "simple.withOneParam": Object {},
  "simple.withOneParam.noParams": Object {},
  "simple.withOneParam.noParams2": Object {},
  "simple.withOneParam.noParams3": Object {},
  "simple.withTwoParam": Object {},
  "simple.withoutParam": Object {},
  "string.noExist": Object {},
  "string.path.noExist": Object {},
  "string.simple": Object {},
  "string.simple.all.one": Object {},
  "string.simple.all.one.two": Object {},
  "string.simple.all.two": Object {},
  "string.simple.withOneParam": Object {},
  "string.simple.withoutParam": Object {},
}
`;

exports[`src/format should format message with FR Locale 1`] = `
Object {
  "language": Object {
    "locale": "fr",
  },
  "number.noExist": Object {
    "exist": "",
  },
  "number.noExist.withOneParam": Object {
    "test": "",
  },
  "number.withOneParam": Object {
    "test": "avec 1 paramètre",
  },
  "number.withOneParam.thousand": Object {
    "test": "avec 1,000 paramètre",
  },
  "number.withPercentParam": Object {
    "test": "avec 50% paramètre",
  },
  "number.withUSDFormat": Object {
    "test": "avec $1,234.00 paramètre",
  },
  "number.withoutParam": Object {
    "test": "aucun paramètre",
  },
  "plural.simple.noparam": Object {
    "test": "vous avez {param, plural, =0 {aucun paramètre.} =1 {one paramètre.} other {# paramètres.}}",
  },
  "plural.simple.one": Object {
    "test": "vous avez one paramètre.",
  },
  "plural.simple.thousand": Object {
    "test": "vous avez 1,000 paramètres.",
  },
  "plural.simple.two": Object {
    "test": "vous avez 2 paramètres.",
  },
  "plural.simple.zero": Object {
    "test": "vous avez aucun paramètre.",
  },
  "select.gender.female": Object {
    "test": "Elle répondra sous peu.",
  },
  "select.gender.male": Object {
    "test": "Il répondra sous peu.",
  },
  "select.gender.shemale": Object {
    "test": "ça répondra sous peu.",
  },
  "simple.withOneParam": Object {
    "test": "avec ONE paramètre",
  },
  "simple.withOneParam.noParams": Object {
    "test": "avec {one} paramètre",
  },
  "simple.withOneParam.noParams2": Object {
    "test": "avec {one} paramètre",
  },
  "simple.withOneParam.noParams3": Object {
    "test": "avec {one} paramètre",
  },
  "simple.withTwoParam": Object {
    "test": "avec ONE TWO paramètre",
  },
  "simple.withoutParam": Object {
    "test": "aucun paramètre",
  },
  "string.noExist": Object {
    "noExist": "",
  },
  "string.path.noExist": Object {
    "exist": "",
  },
  "string.simple": Object {
    "withOneParam": "avec {one} paramètre",
    "withTwoParam": "avec {one} {two} paramètre",
    "withoutParam": "aucun paramètre",
  },
  "string.simple.all.one": Object {
    "withOneParam": "avec ONE paramètre",
    "withTwoParam": "avec {one} {two} paramètre",
    "withoutParam": "aucun paramètre",
  },
  "string.simple.all.one.two": Object {
    "withOneParam": "avec ONE paramètre",
    "withTwoParam": "avec ONE TWO paramètre",
    "withoutParam": "aucun paramètre",
  },
  "string.simple.all.two": Object {
    "withOneParam": "avec {one} paramètre",
    "withTwoParam": "avec ONE TWO paramètre",
    "withoutParam": "aucun paramètre",
  },
  "string.simple.withOneParam": Object {
    "withOneParam": "avec ONE paramètre",
  },
  "string.simple.withoutParam": Object {
    "withoutParam": "aucun paramètre",
  },
}
`;

exports[`src/format should format message with FR Locale 2`] = `
Object {
  "language": Object {
    "locale": "fr",
  },
  "number.noExist": Object {},
  "number.noExist.withOneParam": Object {},
  "number.withOneParam": Object {},
  "number.withOneParam.thousand": Object {},
  "number.withPercentParam": Object {},
  "number.withUSDFormat": Object {},
  "number.withoutParam": Object {},
  "plural.simple.noparam": Object {},
  "plural.simple.one": Object {},
  "plural.simple.thousand": Object {},
  "plural.simple.two": Object {},
  "plural.simple.zero": Object {},
  "select.gender.female": Object {},
  "select.gender.male": Object {},
  "select.gender.shemale": Object {},
  "simple.withOneParam": Object {},
  "simple.withOneParam.noParams": Object {},
  "simple.withOneParam.noParams2": Object {},
  "simple.withOneParam.noParams3": Object {},
  "simple.withTwoParam": Object {},
  "simple.withoutParam": Object {},
  "string.noExist": Object {},
  "string.path.noExist": Object {},
  "string.simple": Object {},
  "string.simple.all.one": Object {},
  "string.simple.all.one.two": Object {},
  "string.simple.all.two": Object {},
  "string.simple.withOneParam": Object {},
  "string.simple.withoutParam": Object {},
}
`;
